[gd_scene load_steps=5 format=3 uid="uid://cnkjlmhcyjdft"]

[ext_resource type="Script" path="res://BlurExample.gd" id="1_1kp6q"]
[ext_resource type="Material" uid="uid://bbal7jrquqit3" path="res://BlurYMaterial.tres" id="1_dlvcd"]
[ext_resource type="Material" uid="uid://cv2mrmyhkpw46" path="res://BlurXMaterial.tres" id="1_i28u4"]
[ext_resource type="Texture2D" uid="uid://xsv7c6p4np53" path="res://icon.svg" id="2_a11mo"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1kp6q")

[node name="BlurY" type="SubViewportContainer" parent="."]
unique_name_in_owner = true
material = ExtResource("1_dlvcd")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="BlurY"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="BlurX" type="SubViewportContainer" parent="BlurY/SubViewport"]
unique_name_in_owner = true
material = ExtResource("1_i28u4")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="BlurY/SubViewport/BlurX"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Sprite2D" type="Sprite2D" parent="BlurY/SubViewport/BlurX/SubViewport"]
texture = ExtResource("2_a11mo")
offset = Vector2(100, 100)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Blur radius:"

[node name="BlurRadiusSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 50.0
step = 0.0
value = 10.0

[node name="BlurRadiusLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
